--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>Example</title>
 </head>
-<body onload="doGLDraw();">
-<script type="text/javascript" src="src/WebGL.js"></script>
-<script type="text/javascript" src="src/VertexBuffer.js"></script>
-<script type="text/javascript" src="src/ShaderSupport.js"></script>
+<body onload="new MyGame('GLCanvas')">
+<script type="text/javascript" src="src/Engine/Engine_Core.js"></script>
+<script type="text/javascript" src="src/Engine/Engine_VertexBuffer.js"></script>
+<script type="text/javascript" src="src/Engine/SimpleShader.js"></script>
+<script type="text/javascript" src="src/MyGame/MyGame.js">
 
+</script>
 <canvas id="GLCanvas" width="640" height="480">
     Your browser does not support HTML 5 Canvas.
 </canvas>
