--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 </head>
 <body onload="new MyGame('GLCanvas')">
 
-<script type="text/javascript" src="src/Engine/Engine_Core.js"></script>
-<script type="text/javascript" src="src/Engine/Engine_VertexBuffer.js"></script>
+<script type="text/javascript" src="src/Engine/Core/Engine_Core.js"></script>
+<script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
 <script type="text/javascript" src="src/Engine/SimpleShader.js"></script>
+<script type="text/javascript" src="src/Engine/Renderable.js"></script>
 <script type="text/javascript" src="src/MyGame/MyGame.js">
 
 </script>
