--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body onload="new MyGame('GLCanvas')">
 
+<script type="text/javascript" src="src/lib/gl-matrix-min.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Engine_Core.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
 <script type="text/javascript" src="src/Engine/SimpleShader.js"></script>
