--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <script type="text/javascript" src="src/Engine/SimpleShader.js"></script>
 <script type="text/javascript" src="src/Engine/Renderable.js"></script>
 <script type="text/javascript" src="src/Engine/Transform.js"></script>
+<script type="text/javascript" src="src/Engine/Camera.js"></script>
 <script type="text/javascript" src="src/MyGame/MyGame.js">
 
 </script>
