--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script type="text/javascript" src="src/lib/gl-matrix-min.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Engine_Core.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
+<script type="text/javascript" src="src/Engine/Core/Engine_GameLoop.js"></script>
 <script type="text/javascript" src="src/Engine/SimpleShader.js"></script>
 <script type="text/javascript" src="src/Engine/Renderable.js"></script>
 <script type="text/javascript" src="src/Engine/Transform.js"></script>
