--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <script type="text/javascript" src="src/Engine/Renderable.js"></script>
 <script type="text/javascript" src="src/Engine/Transform.js"></script>
 <script type="text/javascript" src="src/Engine/Camera.js"></script>
+<script type="text/javascript" src="src/Engine/Scene.js"></script>
 <script type="text/javascript" src="src/MyGame/MyGame.js"></script>
+<script type="text/javascript" src="src/MyGame/BlueLevel.js"></script>
 <script type="text/javascript" src="src/MyGame/Util/SceneFileParser.js"></script>
 <canvas id="GLCanvas" width="640" height="480">
     Your browser does not support HTML 5 Canvas.
