--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 <script type="text/javascript" src="src/Engine/Core/Resources/Engine_AudioClips.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/SimpleShader.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/TextureShader.js"></script>
+<script type="text/javascript" src="src/Engine/Shaders/SpriteShader.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/Renderable.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable.js"></script>
+<script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable.js"></script>
 <script type="text/javascript" src="src/Engine/Transform.js"></script>
 <script type="text/javascript" src="src/Engine/Camera.js"></script>
 <script type="text/javascript" src="src/Engine/Scene.js"></script>
