--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script type="text/javascript" src="src/Engine/Core/Resources/Engine_TextFileLoader.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Resources/Engine_DefaultResources.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Resources/Engine_AudioClips.js"></script>
+<script type="text/javascript" src="src/Engine/Core/Resources/Engine_Fonts.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/SimpleShader.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/TextureShader.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/SpriteShader.js"></script>
@@ -24,12 +25,12 @@
 <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/SpriteAnimateRenderable.js"></script>
+<script type="text/javascript" src="src/Engine/Renderables/FontRenderable.js"></script>
 <script type="text/javascript" src="src/Engine/Transform.js"></script>
 <script type="text/javascript" src="src/Engine/Camera.js"></script>
 <script type="text/javascript" src="src/Engine/Scene.js"></script>
 <script type="text/javascript" src="src/MyGame/MyGame.js"></script>
-<script type="text/javascript" src="src/MyGame/BlueLevel.js"></script>
-<script type="text/javascript" src="src/MyGame/Util/SceneFileParser.js"></script>
+<script type="text/javascript" src="src/MyGame/GameOver.js"></script>
 <canvas id="GLCanvas" width="640" height="480">
     Your browser does not support HTML 5 Canvas.
 </canvas>
