--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body onload="var myGame=new MyGame();
             gEngine.Core.initializeEngineCore('GLCanvas',myGame);">
 
-<script type="text/javascript" src="src/lib/gl-matrix-min.js"></script>
+<script type="text/javascript" src="src/lib/gl-matrix.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Engine_Core.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Engine_GameLoop.js"></script>
@@ -31,10 +31,11 @@
 <script type="text/javascript" src="src/Engine/Transform.js"></script>
 <script type="text/javascript" src="src/Engine/Camera.js"></script>
 <script type="text/javascript" src="src/Engine/Scene.js"></script>
-<script type="text/javascript" src="src/MyGame/MyGame.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/DyePack.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/Minion.js"></script>
+<script type="text/javascript" src="src/MyGame/Objects/Brain.js"></script>
+<script type="text/javascript" src="src/MyGame/MyGame.js"></script>
 <canvas id="GLCanvas" width="640" height="480">
     Your browser does not support HTML 5 Canvas.
 </canvas>
