--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <script type="text/javascript" src="src/Engine/Transform.js"></script>
 <script type="text/javascript" src="src/Engine/Camera.js"></script>
 <script type="text/javascript" src="src/Engine/Scene.js"></script>
+<script type="text/javascript" src="src/Engine/BoundingBox.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/DyePack.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/Minion.js"></script>
