--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 <script type="text/javascript" src="src/Engine/Core/Resources/Engine_Fonts.js"></script>
 <script type="text/javascript" src="src/Engine/GameObjects/GameObject.js"></script>
 <script type="text/javascript" src="src/Engine/GameObjects/GameObjectSet.js"></script>
+<script type="text/javascript" src="src/Engine/GameObjects/GameObject_PixelCollision.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/Renderable.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable.js"></script>
+<script type="text/javascript" src="src/Engine/Renderables/TextureRenderable_PixelCollision.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/SpriteAnimateRenderable.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/FontRenderable.js"></script>
@@ -36,6 +38,7 @@
 <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/Minion.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/Brain.js"></script>
+<script type="text/javascript" src="src/MyGame/Objects/TextureObject.js"></script>
 <script type="text/javascript" src="src/MyGame/MyGame.js"></script>
 <canvas id="GLCanvas" width="640" height="480">
     Your browser does not support HTML 5 Canvas.
