--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable_PixelCollision.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable.js"></script>
+<script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable_PixelCollision.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/SpriteAnimateRenderable.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/FontRenderable.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/SimpleShader.js"></script>
