--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
 <script type="text/javascript" src="src/Engine/Shaders/SimpleShader.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/TextureShader.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/SpriteShader.js"></script>
+<script type="text/javascript" src="src/Engine/Utils/Transform.js"></script>
+<script type="text/javascript" src="src/Engine/Utils/Interpolate.js"></script>
+<script type="text/javascript" src="src/Engine/Utils/InterpolateVec2.js"></script>
 <script type="text/javascript" src="src/Engine/Cameras/Camera.js"></script>
 <script type="text/javascript" src="src/Engine/Cameras/Camera_Manipulation.js"></script>
-<script type="text/javascript" src="src/Engine/Transform.js"></script>
+<script type="text/javascript" src="src/Engine/Cameras/CameraState.js"></script>
 <script type="text/javascript" src="src/Engine/Scene.js"></script>
-<script type="text/javascript" src="src/Engine/BoundingBox.js"></script>
+<script type="text/javascript" src="src/Engine/Utils/BoundingBox.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/DyePack.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/Minion.js"></script>
