--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 <script type="text/javascript" src="src/Engine/Utils/Transform.js"></script>
 <script type="text/javascript" src="src/Engine/Utils/Interpolate.js"></script>
 <script type="text/javascript" src="src/Engine/Utils/InterpolateVec2.js"></script>
+<script type="text/javascript" src="src/Engine/Utils/ShakePosition.js"></script>
 <script type="text/javascript" src="src/Engine/Cameras/Camera.js"></script>
 <script type="text/javascript" src="src/Engine/Cameras/Camera_Manipulation.js"></script>
 <script type="text/javascript" src="src/Engine/Cameras/CameraState.js"></script>
+<script type="text/javascript" src="src/Engine/Cameras/CameraShake.js"></script>
 <script type="text/javascript" src="src/Engine/Scene.js"></script>
 <script type="text/javascript" src="src/Engine/Utils/BoundingBox.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/DyePack.js"></script>
