--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <script type="text/javascript" src="src/Engine/Cameras/Camera_Manipulation.js"></script>
 <script type="text/javascript" src="src/Engine/Cameras/CameraState.js"></script>
 <script type="text/javascript" src="src/Engine/Cameras/CameraShake.js"></script>
+<script type="text/javascript" src="src/Engine/Cameras/Camera_Input.js"></script>
 <script type="text/javascript" src="src/Engine/Scene.js"></script>
 <script type="text/javascript" src="src/Engine/Utils/BoundingBox.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/DyePack.js"></script>
