--- a/index.html
+++ b/index.html
@@ -8,19 +8,29 @@
             gEngine.Core.initializeEngineCore('GLCanvas',myGame);">
 
 <script type="text/javascript" src="src/lib/gl-matrix.js"></script>
+
 <script type="text/javascript" src="src/Engine/Core/Engine_Core.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Engine_GameLoop.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Engine_Input.js"></script>
-<script type="text/javascript" src="src/Engine/Core/Engine_Textures.js"></script>
+
 <script type="text/javascript" src="src/Engine/Core/Resources/Engine_ResourceMap.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Resources/Engine_TextFileLoader.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Resources/Engine_DefaultResources.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Resources/Engine_AudioClips.js"></script>
+<script type="text/javascript" src="src/Engine/Core/Resources/Engine_Textures.js"></script>
 <script type="text/javascript" src="src/Engine/Core/Resources/Engine_Fonts.js"></script>
-<script type="text/javascript" src="src/Engine/GameObjects/GameObject.js"></script>
-<script type="text/javascript" src="src/Engine/GameObjects/GameObjectSet.js"></script>
-<script type="text/javascript" src="src/Engine/GameObjects/GameObject_PixelCollision.js"></script>
+
+<script type="text/javascript" src="src/Engine/Scene.js"></script>
+
+<script type="text/javascript" src="src/Engine/Lights/Light.js"></script>
+
+<script type="text/javascript" src="src/Engine/Utils/Transform.js"></script>
+<script type="text/javascript" src="src/Engine/Utils/BoundingBox.js"></script>
+<script type="text/javascript" src="src/Engine/Utils/Interpolate.js"></script>
+<script type="text/javascript" src="src/Engine/Utils/InterpolateVec2.js"></script>
+<script type="text/javascript" src="src/Engine/Utils/ShakePosition.js"></script>
+
 <script type="text/javascript" src="src/Engine/Renderables/Renderable.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable_PixelCollision.js"></script>
@@ -28,26 +38,31 @@
 <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable_PixelCollision.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/SpriteAnimateRenderable.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/FontRenderable.js"></script>
+<script type="text/javascript" src="src/Engine/Renderables/LineRenderable.js"></script>
+<script type="text/javascript" src="src/Engine/Renderables/LightRenderable.js"></script>
+
+<script type="text/javascript" src="src/Engine/GameObjects/GameObject.js"></script>
+<script type="text/javascript" src="src/Engine/GameObjects/GameObject_PixelCollision.js"></script>
+<script type="text/javascript" src="src/Engine/GameObjects/GameObjectSet.js"></script>
+
 <script type="text/javascript" src="src/Engine/Shaders/SimpleShader.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/TextureShader.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/SpriteShader.js"></script>
-<script type="text/javascript" src="src/Engine/Utils/Transform.js"></script>
-<script type="text/javascript" src="src/Engine/Utils/Interpolate.js"></script>
-<script type="text/javascript" src="src/Engine/Utils/InterpolateVec2.js"></script>
-<script type="text/javascript" src="src/Engine/Utils/ShakePosition.js"></script>
+<script type="text/javascript" src="src/Engine/Shaders/LineShader.js"></script>
+<script type="text/javascript" src="src/Engine/Shaders/LightShader.js"></script>
+
 <script type="text/javascript" src="src/Engine/Cameras/Camera.js"></script>
 <script type="text/javascript" src="src/Engine/Cameras/Camera_Manipulation.js"></script>
+<script type="text/javascript" src="src/Engine/Cameras/Camera_Input.js"></script>
+<script type="text/javascript" src="src/Engine/Cameras/Camera_Xform.js"></script>
 <script type="text/javascript" src="src/Engine/Cameras/CameraState.js"></script>
 <script type="text/javascript" src="src/Engine/Cameras/CameraShake.js"></script>
-<script type="text/javascript" src="src/Engine/Cameras/Camera_Input.js"></script>
-<script type="text/javascript" src="src/Engine/Scene.js"></script>
-<script type="text/javascript" src="src/Engine/Utils/BoundingBox.js"></script>
-<script type="text/javascript" src="src/MyGame/Objects/DyePack.js"></script>
+
+<script type="text/javascript" src="src/MyGame/MyGame.js"></script>
+
 <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/Minion.js"></script>
-<script type="text/javascript" src="src/MyGame/Objects/Brain.js"></script>
-<script type="text/javascript" src="src/MyGame/Objects/TextureObject.js"></script>
-<script type="text/javascript" src="src/MyGame/MyGame.js"></script>
+
 <canvas id="GLCanvas" width="640" height="480">
     Your browser does not support HTML 5 Canvas.
 </canvas>
