--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <script type="text/javascript" src="src/Engine/Scene.js"></script>
 
 <script type="text/javascript" src="src/Engine/Lights/Light.js"></script>
+<script type="text/javascript" src="src/Engine/Lights/LightSet.js"></script>
 
 <script type="text/javascript" src="src/Engine/Utils/Transform.js"></script>
 <script type="text/javascript" src="src/Engine/Utils/BoundingBox.js"></script>
@@ -50,6 +51,7 @@
 <script type="text/javascript" src="src/Engine/Shaders/SpriteShader.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/LineShader.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/LightShader.js"></script>
+<script type="text/javascript" src="src/Engine/Shaders/ShaderLightAtIndex.js"></script>
 
 <script type="text/javascript" src="src/Engine/Cameras/Camera.js"></script>
 <script type="text/javascript" src="src/Engine/Cameras/Camera_Manipulation.js"></script>
@@ -59,7 +61,8 @@
 <script type="text/javascript" src="src/Engine/Cameras/CameraShake.js"></script>
 
 <script type="text/javascript" src="src/MyGame/MyGame.js"></script>
-
+<script type="text/javascript" src="src/MyGame/MyGame_LightControl.js"></script>
+<script type="text/javascript" src="src/MyGame/MyGame_Lights.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/Minion.js"></script>
 
