--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <script type="text/javascript" src="src/Engine/Renderables/FontRenderable.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/LineRenderable.js"></script>
 <script type="text/javascript" src="src/Engine/Renderables/LightRenderable.js"></script>
+<script type="text/javascript" src="src/Engine/Renderables/IllumRenderable.js"></script>
 
 <script type="text/javascript" src="src/Engine/GameObjects/GameObject.js"></script>
 <script type="text/javascript" src="src/Engine/GameObjects/GameObject_PixelCollision.js"></script>
@@ -52,6 +53,7 @@
 <script type="text/javascript" src="src/Engine/Shaders/LineShader.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/LightShader.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/ShaderLightAtIndex.js"></script>
+<script type="text/javascript" src="src/Engine/Shaders/IllumShader.js"></script>
 
 <script type="text/javascript" src="src/Engine/Cameras/Camera.js"></script>
 <script type="text/javascript" src="src/Engine/Cameras/Camera_Manipulation.js"></script>
