--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script type="text/javascript" src="src/Engine/Core/Resources/Engine_Fonts.js"></script>
 
 <script type="text/javascript" src="src/Engine/Scene.js"></script>
+<script type="text/javascript" src="src/Engine/Material.js"></script>
 
 <script type="text/javascript" src="src/Engine/Lights/Light.js"></script>
 <script type="text/javascript" src="src/Engine/Lights/LightSet.js"></script>
@@ -54,6 +55,7 @@
 <script type="text/javascript" src="src/Engine/Shaders/LightShader.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/ShaderLightAtIndex.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/IllumShader.js"></script>
+<script type="text/javascript" src="src/Engine/Shaders/ShaderMaterial.js"></script>
 
 <script type="text/javascript" src="src/Engine/Cameras/Camera.js"></script>
 <script type="text/javascript" src="src/Engine/Cameras/Camera_Manipulation.js"></script>
@@ -65,6 +67,8 @@
 <script type="text/javascript" src="src/MyGame/MyGame.js"></script>
 <script type="text/javascript" src="src/MyGame/MyGame_LightControl.js"></script>
 <script type="text/javascript" src="src/MyGame/MyGame_Lights.js"></script>
+<script type="text/javascript" src="src/MyGame/MyGame_MaterialControl.js"></script>
+
 <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/Minion.js"></script>
 
