--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
 <script type="text/javascript" src="src/Engine/Shaders/ShaderLightAtIndex.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/IllumShader.js"></script>
 <script type="text/javascript" src="src/Engine/Shaders/ShaderMaterial.js"></script>
+<script type="text/javascript" src="src/Engine/Shaders/ShadowCasterShader.js"></script>
+
+<script type="text/javascript" src="src/Engine/Shadows/ShadowCaster.js"></script>
+<script type="text/javascript" src="src/Engine/Shadows/ShadowReceiver.js"></script>
+<script type="text/javascript" src="src/Engine/Shadows/ShadowReceiver_stencil.js"></script>
 
 <script type="text/javascript" src="src/Engine/Cameras/Camera.js"></script>
 <script type="text/javascript" src="src/Engine/Cameras/Camera_Manipulation.js"></script>
@@ -68,6 +73,7 @@
 <script type="text/javascript" src="src/MyGame/MyGame_LightControl.js"></script>
 <script type="text/javascript" src="src/MyGame/MyGame_Lights.js"></script>
 <script type="text/javascript" src="src/MyGame/MyGame_MaterialControl.js"></script>
+<script type="text/javascript" src="src/MyGame/MyGame_shadow.js"></script>
 
 <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
 <script type="text/javascript" src="src/MyGame/Objects/Minion.js"></script>
